--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="container">
         <h1>D&D Racial Slurs</h1>
+        <h6>(it's a joke app)</h6>
         <div class="wrapper">
             <label for="search">Filter: </label>
             <input placeholder="human, dwarves, dragonborns..." type="text" class="search">
